samples/_failures_safe/1761140420_fb0eff_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_dcab4b46.c: In function ‘main’:
./samples/SAFE/__tmp_dcab4b46.c:126:12: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  126 |     struct Vector3D sum
      |            ^~~~~~~~
./samples/SAFE/__tmp_dcab4b46.c:126:12: error: expected declaration or statement at end of input
